--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -28,9 +28,9 @@ jobs:
       - run: echo "This is an input ${{ inputs.input_name }}."
       - run: echo "This is an topic ${{ inputs.topic_name }}."
       - run: |
-          if [[ ${{ inputs.topic_name }} == 'dc-health' ]]; then
+          if [[ ${{ inputs.topic_name }} == 'iia' ]]; then
             echo "Secrete for dc-health ${{ secrets.MY_SECRET }}"
-          else if [[ ${{ inputs.topic_name }} == 'iia' ]]; then
+          else if [[ ${{ inputs.topic_name }} == 'dc-health' ]]; then
             echo "Secrete for iia ${{ secrets.MY_CALLED_SECRET }}"
           else
             echo "Secrete for other ${{ secrets.MY_CALLED_SECRET }}"
