--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -30,9 +30,9 @@ jobs:
       - run: |
           if [[ ${{ inputs.topic_name }} == 'iia' ]]; then
             echo "Secrete for dc-health ${{ secrets.MY_SECRET }}"
-          else if [[ ${{ inputs.topic_name }} == 'dc-health' ]]; then
+          elif [[ ${{ inputs.topic_name }} == 'dc-health' ]]; then
             echo "Secrete for iia ${{ secrets.MY_CALLED_SECRET }}"
           else
-            echo "Secrete for other ${{ secrets.MY_CALLED_SECRET }}"
+            echo "Secrete for GCP not profided!"
           fi
       
