--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -27,4 +27,6 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "This is an input ${{ inputs.input_name }}."
       - run: echo "This is an topic ${{ inputs.topic_name }}."
-      - run: echo "Secrete for dc-health ${{ secrets['MY_SECRET'] }}"
+      - run: echo "Secrete for my_secret ${{ secrets['MY_SECRET'] }}"
+      - run: echo "Secrete for my_called_secret ${{ secrets['MY_CALLED_SECRET'] }}"
+      - run: echo "Secrete for dc-health ${{ secrets.MY_CALLED_SECRET }}"
