--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    env:
+      # Get secret names
+      GCP_SECRET: ${{ input.cumulus_gcp_json_key_identifier }}
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -26,6 +29,4 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "This is an input ${{ inputs.input_name }}."
-      - run: echo "Secrete for my_secret ${{ secrets['MY_SECRET'] }}"
-      - run: echo "Secrete for my_called_secret ${{ secrets['MY_CALLED_SECRET'] }}"
-      - run: echo "Secrete for dc-health ${{ secrets.MY_CALLED_SECRET }}"
+      - run: echo "Secrete for my_secret ${{ secrets[env.GCP_SECRET] }}"
