--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Get secret names
-      GCP_SECRET: ${{ input.cumulus_gcp_json_key_identifier }}
+      GCP_SECRET: ${{ inputs.cumulus_gcp_json_key_identifier }}
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
