--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -29,4 +29,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "This is an input ${{ inputs.input_name }}."
+      - run: echo "Env GCP_SECRET ${{ env.GCP_SECRET }}"
       - run: echo "Secrete for my_secret ${{ secrets[env.GCP_SECRET] }}"
+
+      
