--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -14,9 +14,9 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     env:
-      # Get secret names
-      GCP_SECRET: ${{ inputs.cumulus_gcp_json_key_identifier }}
+      GCP_SECRET: ${{ secrets[format('{0}', inputs.cumulus_gcp_json_key_identifier)] }}
     steps:
+      - run: echo "GCP_SECRET= $GCP_SECRET"
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
