--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       GCP_SECRET: ${{ secrets[format('{0}', inputs.cumulus_gcp_json_key_identifier)] }}
     steps:
-      - run: echo $GCP_SECRET
+      - run: echo $env.GCP_SECRET
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
