--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -35,5 +35,6 @@ jobs:
       - run: |
           vDB_PASSWORD="${{ secrets[env.GCP_SECRET] }}"
           echo "The database password retrieved dynamically is $vDB_PASSWORD"
+      - run: echo "MySecret= ${{ secrets.MY_SECRET }}."
 
       
