--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -13,8 +13,9 @@ on:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    environment: REUSABLE
     env:
-      GCP_SECRET: ${{ inputs.cumulus_gcp_json_key_identifier }}
+      GCP_SECRET: ${{ secrets.ENV_SECRET }}
     steps:
       - run: echo ${{ env.GCP_SECRET }}
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -30,13 +31,7 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "This is an input ${{ inputs.input_name }}."
       - run: echo "Env GCP_SECRET= ${{ env.GCP_SECRET }}"
-      - run: echo "Secrete for my_secret= ${{ secrets[format('{0}', inputs.cumulus_gcp_json_key_identifier)] }}."
-      - run: echo "Input cumulus_gcp_json_key_identifier= ${{ inputs.cumulus_gcp_json_key_identifier }}."
-      - run: |
-          vDB_PASSWORD="${{ secrets[env.GCP_SECRET] }}"
-          echo "The database password retrieved dynamically is $vDB_PASSWORD"
-      - run: echo "MySecret= ${{ secrets.MY_SECRET }}."
-      - run: echo "MyCallerSecret= ${{ secrets.MY_CALLER_SECRET }}."
+
 
       
 
