--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -16,8 +16,10 @@ jobs:
     environment: REUSABLE
     env:
       GCP_SECRET: ${{ secrets.ENV_SECRET }}
+      GCP_SECRET_2: ${{ secrets.ENV_SECRET_2 }}
     steps:
       - run: echo ${{ env.GCP_SECRET }}
+      - run: echo ${{ env.GCP_SECRET_2 }}
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
@@ -31,6 +33,7 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "This is an input ${{ inputs.input_name }}."
       - run: echo "Env GCP_SECRET= ${{ env.GCP_SECRET }}"
+      - run: echo "Env GCP_SECRET_2= ${{ env.GCP_SECRET_2 }}"
 
 
       
