--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -9,6 +9,9 @@ on:
         description: "Topic name"
         required: true
         type: string
+    secrets:
+      envPAT:
+        required: true
       
 jobs:
   Explore-GitHub-Actions:
