--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -19,16 +19,14 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - run: echo "Input Parameter = ${{ inputs.input_name }}."
+      - run: echo "Input Parameter = ${{ inputs.cumulus_gcp_json_key_identifier }}."
       - run: echo "Secret env GCP_SECRET= ${{ secrets.GCP_SECRET }}"
-      - name: Check secretes called
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: echo "Secrets my called secret = ${{ secrets.MY_CALLED_SECRET }}"
-      - name: Check secretes caller
-        env:
-          MY_CALLED_SECRET: ${{ secrets.MY_CALLED_SECRET }}
-        run: echo "Secrets my caller secret = $MY_CALLED_SECRET"
+      - name: Check secretes 1
+        run: echo "Secrets my called secret = ${{ secrets.MY_CALLER_SECRET }}"
+      - name: Check secretes 2
+        run: echo "Secrets my called secret = ${{ secrets[inputs.cumulus_gcp_json_key_identifier] }}"
+      - name: Check secretes 3
+        run: echo "Secrets my called secret = ${{ secrets[format('{0}', inputs.cumulus_gcp_json_key_identifier)] }}"
        
   
       
