--- a/.github/workflows/reusable_workflow_remote.yml
+++ b/.github/workflows/reusable_workflow_remote.yml
@@ -6,7 +6,7 @@ on:
         required: true
         type: string
       cumulus_gcp_json_key_identifier:
-        description: "Topic name"
+        description: "Cumulus GCP JSON KEY IDENTIFIER"
         required: true
         type: string
 permissions: read-all  
@@ -17,20 +17,13 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - run: echo "Input Parameter = ${{ inputs.cumulus_gcp_json_key_identifier }}."
-      - name: Check secretes 1
-        run: echo "Secrets my called secret = ${{ secrets.MY_CALLER_SECRET }}"
-      - name: Check secretes 2
-        run: echo "Secrets my called secret = ${{ secrets[inputs.cumulus_gcp_json_key_identifier] }}"
-      - name: Check secretes 3
-        run: echo "Secrets my called secret = ${{ secrets[format('{0}', inputs.cumulus_gcp_json_key_identifier)] }}"
-      - name: Check secretes 4
+      - name: Secrets from input CGJK identifier
+        run: echo "Secrets from input CGJK identifier = ${{ secrets[inputs.cumulus_gcp_json_key_identifier] }}"
+      - name: Secrets my caller
+        run: echo "Secrets my caller secret = ${{ secrets.MY_CALLER_SECRET }}"
+      - name: Secrets my called
         run: echo "Secrets my called secret = ${{ secrets.MY_CALLED_SECRET }}"
-      - name: Check secretes 5
+      - name: Secrets GITHUB_TOKEN
         run: echo "Secrets my called secret = ${{ secrets.GITHUB_TOKEN }}"
-
-        
-  
       
